--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "babel-plugin-module-resolver": "^4.0.0",
+    "immer": "^6.0.1",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
