--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "immer": "^6.0.1",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
+    "prismjs": "^1.19.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "webpack-bundle-analyzer": "^3.6.0",
