--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prismjs": "^1.19.0",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-select": "^3.0.8",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
   }
