--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "immer": "^6.0.1",
+    "lodash": "^4.17.15",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
