--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@types/next": "^9.0.0",
+    "@types/react": "^16.9.34",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "immer": "^6.0.1",
     "lodash": "^4.17.15",
@@ -25,5 +28,9 @@
     "react-select": "^3.0.8",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^13.13.0",
+    "typescript": "^3.8.3"
   }
 }
