Convert some files to typescript

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@types/lodash": "^4.14.150",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.34",
+    "@types/react-select": "^3.0.11",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
