--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "immer": "^6.0.1",
     "lodash": "^4.17.15",
     "next": "9.2.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "prismjs": "https://github.com/Goose97/forked-prism.git",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-resizable": "^1.10.1",
+    "react-resize-panel": "^0.3.5",
     "react-select": "^3.0.8",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
