--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "antd": "^4.2.4",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.0.0",
     "immer": "^6.0.1",
     "less": "^3.11.1",
     "lodash": "^4.17.15",
     "next": "9.2.2",
-    "node-sass": "^4.14.1",
     "node-sass": "^4.13.1",
     "null-loader": "^4.0.0",
     "path": "^0.12.7",
