Add helper pointer for graph like DS and bootstrap new graph DS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "paths": {
       "utils/*": ["./utils/*"],
       "hocs/*": ["./hocs/*"],
+      "types/*": ["./types/*"],
+      "components/*": ["./components/*"],
     },
     "module": "esnext",
     "moduleResolution": "node",
