--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_PATH=. next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -25,10 +25,11 @@
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.0.0",
+    "cross-env": "^7.0.2",
     "immer": "^6.0.1",
     "less": "^3.11.1",
     "lodash": "^4.17.15",
-    "next": "9.2.2",
+    "next": "^9.4.4",
     "node-sass": "^4.13.1",
     "null-loader": "^4.0.0",
     "path": "^0.12.7",
