--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.1.0",
+    "@ant-design/icons": "^4.2.1",
     "@babel/helper-validator-identifier": "^7.9.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
@@ -25,6 +25,7 @@
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.0.0",
+    "bezier-easing": "^2.1.0",
     "immer": "^6.0.1",
     "less": "^3.11.1",
     "lodash": "^4.17.15",
