--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-resizable": "^1.10.1",
     "react-resize-panel": "^0.3.5",
     "react-select": "^3.0.8",
+    "react-sticky": "^6.0.3",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
