--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prestart": "next build",
- "start": "next start -p ${PORT}",
+    "dev": "NODE_PATH=. next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
